# FastTrackAPI---Projeto-Prisma

./: .coveragerc  .env  .env.example  .env.prod  .env.test  .env.test.inmemory  .gitignore  Dockerfile  README (2).md  README copy.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  alembic.ini  benchmark.ps1  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  start_local.sh
.github/: ci.yml
.github/workflows/: ci.yml
app/: deps.py  deps_singletons.py  main.py
app/api/v1/: api_router.py
app/api/v1/endpoints/: admin_urls.py  auth.py  eventos.py  events.py  users.py  ws_router.py
app/constants/: routes.py
app/core/: config.py  contextvars.py  exception_handlers.py  logging_config.py  rate_limit_config.py  security.py  tracing_config.py
app/db/: base.py  session.py
app/middleware/: cors.py  logging_middleware.py  rate_limiter.py  secure_headers.py
app/models/: models_event.py  models_forecast_info.py  models_local_info.py  models_user.py
app/repositories/: event.py  event_mem.py  event_orm_db.py  evento.py  evento_mem.py  user.py  user_mem.py
app/schemas/: common.py  event_create.py  event_update.py  evento_atualizacao.py  evento_criacao.py  local_info.py  previsao_clima.py  token.py  user.py  venue_type.py  weather_forecast.py
app/services/: auth.py  auth_service.py  forecast.py  local_info_api.py  mock_forecast_info.py  mock_local_info.py  mock_users.py  user_db.py
app/services/interfaces/: forecast_info.py  forecast_info_protocol.py  local_info.py  local_info_protocol.py  user.py  user_protocol.py
app/utils/: cache.py  git_info.py  h_events.py  http.py  patch.py  security.py  service_url.py  settings_error.py  validation.py
app/websockets/: ws_dashboard.py  ws_events.py  ws_manager.py
docs/: 10_benchmark_documentacao.md  1_introducao.md  2_visao-geral.md  3_objetivos.md  4-1_arquitetura.md  4-2_configuracao-ambiente.md  4-3_dependencias-reutilizaveis.md  4-4_urls-dinamicas.md  4_fundamentos-arquitetura.md  5-1_filtros-paginacao.md  5-2_cache-redis.md  5-3-1_Métricas com Prometheus + Grafana.md  5-3-2 Tracing-opentelemetry.md  5-3-3_hardening_de_seguranca.md  5-3_observabilidade-logs.md  5-4_websockets-arquivos.md  5-5_banco-migrations.md  5-6 Latencia-mocks.md  5-7_background_tasks.md  5_tecnologias-boas-praticas.md  6-1_testes-automatizados.md  6-2_pipeline-ci.md  6_qualidade-automacao.md  7_roadmap.md  8_executar-localmente.md  9_referencias.md
docs/examples/: events_test_upload.csv  fastapi_observabilidade_dashboard.json  response_1750341305415.json
infra/: prometheus.yml
migrations/: env.py
migrations/versions/: 0f309be50b5e_create_all_tables.py  4b8f4515e23b_ensure_participants_defaults_to_empty_.py  7daff5ed36ab_add_participants_field_to_event.py
tests/: test_eventos.ps1  test_eventos.sh
tests/middleware/: test_secure_headers.py
tests/unit/: conftest.py  test_auth.py  test_eventos.py  test_eventos_completo copy.py  test_eventos_completo.py  test_eventos_protected.py  test_eventos_unitario.py  test_forecast_info.py  test_localinfo.py  test_others.py  test_rate_limiter.py  test_secure_headers_unit.py
