[tool.poetry]
name = "fasttrackapi-projeto-prisma"
version = "0.1.0"
description = "API para gerenciamento de eventos com FastAPI, utilizando boas práticas de desenvolvimento backend."
authors = ["Seu Nome <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
sqlalchemy = "^2.0"
alembic = "^1.13.0"
pydantic = "^2.0"
python-dotenv = "^1.0.0"
typing-extensions = "^4.10.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.9.1"
bcrypt = "<4.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"